# o3gen

./: Cargo.toml  LICENSE  README.md
crates/o3gen/: Cargo.toml
crates/o3gen-openai/: Cargo.toml  build.rs  openai.json
crates/o3gen-openai/examples/: chat_completion.rs  cli.rs
crates/o3gen-openai/src/: lib.rs
crates/o3gen-openai/src/tests/: client.rs  mod.rs  rename.rs
crates/o3gen-petstore/: Cargo.toml  build.rs  petstore.json
crates/o3gen-petstore/fixtures/: composite.json  newtypes.json
crates/o3gen-petstore/src/: integration_test.rs  lib.rs
crates/o3gen-petstore/src/tests/: builder.rs  client.rs  composite.rs  derives.rs  fields.rs  from_impls.rs  mod.rs  serialization.rs
crates/o3gen-tests/: build.rs
crates/o3gen-tests/fixtures/: comprehensive_spec.json  test_spec.json
crates/o3gen-tests/src/: integration_test.rs  lib.rs  rename_test.rs
crates/o3gen/src/: any_of.rs  client.rs  config.rs  emit.rs  flatten.rs  generator.rs  helpers.rs  ir.rs  lib.rs  object.rs  string.rs  transformer.rs
