[package]
name = "o3gen-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
o3gen = { path = "../o3gen" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1.89"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4.44", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
http = "1.4.0"
derive_builder = "0.20.2"

[build-dependencies]
o3gen = { path = "../o3gen" }

[dev-dependencies]
mockito = "1.7.2"
